<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_connection"
        android:title="@string/nav_connection"
        android:icon="@android:drawable/stat_sys_data_bluetooth" />
    <item
        android:id="@+id/nav_nodes"
        android:title="@string/nav_nodes"
        android:icon="@android:drawable/ic_menu_mapmode" />
    <item
        android:id="@+id/nav_chat"
        android:title="Чат"
        android:icon="@android:drawable/ic_menu_myplaces" />
    <item
        android:id="@+id/nav_settings"
        android:title="Настройки"
        android:icon="@android:drawable/ic_menu_manage" />
    <item
        android:id="@+id/nav_e2e"
        android:title="@string/e2e_nav_label"
        android:icon="@android:drawable/ic_lock_lock" />
</menu>
